style: Fix invisible MessageIndicator text in light style
The combination of MessageIndicator inside MessageMedia + .outgoing were
making the text invisible in the light style. This was because we
weren't overriding the text color of .outgoing.

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -165,6 +165,7 @@ messagelabel > messageindicators {
 
 messagemedia overlay > messageindicators, messagesticker messageindicators {
   background-color: alpha(@view_bg_color, 0.8);
+  color: @view_fg_color;
   border-radius: 9999px;
   padding: 2px 6px;
   margin: 6px;
